css/metabox.css
/* ... */
/***** START LAYOUTS ***********************************/

#pagebuilder-layout-editor .column-layout-1 .column-1 {
	display: block;
}

#pagebuilder-layout-editor .column-layout-1-2 .column-1 {
	display: inline-block;
	width: 70%;
}
#pagebuilder-layout-editor .column-layout-1-2 .column-2 {
	display: inline-block;
	width: 30%;
}
.pagbuilder-layout-full .column-1 {display: block; background: none !important;}
.pagbuilder-layout-full .column-2 {display: none;}
.pagbuilder-layout-full .column-3 {display: none;}
.pagbuilder-layout-full .column-4 {display: none;}

.pagbuilder-layout-aside .column-1 {display: block; margin-right: 250px;}
.pagbuilder-layout-aside .column-2 {display: block; width: 250px; float: right; background: none !important;}
.pagbuilder-layout-aside .column-3 {display: none;}
.pagbuilder-layout-aside .column-4 {display: none;}

.pagbuilder-layout-half .column-1 {display: inline-block; width: 50%;}
.pagbuilder-layout-half .column-2 {display: inline-block; width: 50%; background: none !important;}
.pagbuilder-layout-half .column-3 {display: none;}
.pagbuilder-layout-half .column-4 {display: none;}

.pagbuilder-layout-third-right .column-1 {display: inline-block; width: 66.66%;}
.pagbuilder-layout-third-right .column-2 {display: inline-block; width: 33.33%; background: none !important;}
.pagbuilder-layout-third-right .column-3 {display: none;}
.pagbuilder-layout-third-right .column-4 {display: none;}

.pagbuilder-layout-third-left .column-1 {display: inline-block; width: 33.33%;}
.pagbuilder-layout-third-left .column-2 {display: inline-block; width: 66.66%; background: none !important;}
.pagbuilder-layout-third-left .column-3 {display: none;}
.pagbuilder-layout-third-left .column-4 {display: none;}

.pagbuilder-layout-thirds .column-1 {display: inline-block; width: 33.33%;}
.pagbuilder-layout-thirds .column-2 {display: inline-block; width: 33.33%; }
.pagbuilder-layout-thirds .column-3 {display: inline-block; width: 33.33%; background: none !important;}
.pagbuilder-layout-thirds .column-4 {display: none;}

.pagbuilder-layout-fourths .column-1 {display: inline-block; width: 25%;}
.pagbuilder-layout-fourths .column-2 {display: inline-block; width: 25%; }
.pagbuilder-layout-fourths .column-3 {display: inline-block; width: 25%;}
.pagbuilder-layout-fourths .column-4 {display: inline-block; width: 25%; background: none !important;}


/***** START LAYOUTS ***********************************/

#pagebuilder-layout-editor .add-item-action {
	display: block;
}

#pagebuilder-layout-editor .add-item-action span {
	visibility: hidden;
	display: block;
	padding: 4px 10px;
}

#pagebuilder-layout-editor .add-item-action.active {
	padding: 8px 0;
}
#pagebuilder-layout-editor .add-item-action.active span {
	visibility: visible;
	border: 2px solid #2ea2cc;
	border-radius: 4px;
	background: #d8e6ef;
	padding: 8px 10px;
}



#pagebuilder-layout-editor .item-header {
	display: block;
	text-decoration: none;
	border: 1px solid #ccc;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
	box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
}
#pagebuilder-layout-editor .native .item-header {
	background: #2ea2cc;
	border-color: #0074a2;
}
#pagebuilder-layout-editor .widget .item-header {
	background: #777;
	border-color: #555;
}
#pagebuilder-layout-editor .widget .item-header:hover {
	background: #555;
	border-color: #555;
}
#pagebuilder-layout-editor .native .item-header:hover {
	background: #0074a2;
}

#pagebuilder-layout-editor .item-header .header-group {
	margin: 0 20px 0 10px;
	color: #fff;
	padding: 10px 0;
}

#pagebuilder-layout-editor .item-header .title-text {
	font-weight: bold;
}

#pagebuilder-layout-editor .item-header .description {
	font-size: 0.8em;
	color: #fff;
}
#pagebuilder-layout-settings {
	margin: 40px 0;
}

#pagebuilder-layout-settings > header {
	font-weight: bold;
	border-bottom: 1px solid #ddd;
}
#pagebuilder-layout-settings p {
	margin-left: 30px;
	display: inline-block;
	vertical-align: middle;
}


#pagebuilder-add-item {
	position: fixed;
	width: 90%;
	height: 90%;
	background: #fff;
	top: 5%;
	left: 5%;
	z-index: 800;
	background-color: #fff;
	background-position: top right;
}

#pagebuilder-add-item a {
	text-decoration: none;
}

#pagebuilder-add-item > header {
	font-size: 22px;
	padding: 0 20px;
	color: #444;
	font-family: "Open Sans",sans-serif;
	font-weight: 600;
	position: relative;
	background: #fcfcfc;
	height: 60px;
	line-height: 60px;
}

#pagebuilder-add-item > header .lb-close-action {
	font-size: 18px;
	color: #444;
	text-decoration: none;
	position: absolute;
	top: 0;
	right: 0;
	font-weight: bold;
	padding: 20px;
	display: block;
	line-height: 1em;
}

#pagebuilder-add-item > nav {
	border-bottom: 1px solid #ccc;
	background: #fcfcfc;
	height: 40px;
}

#pagebuilder-add-item > nav a {
	display: inline-block;
	margin-left: 10px;
	padding: 0 10px;
	line-height: 40px;
	vertical-align: bottom;
	position: relative;
	height: 40px;
	
}

#pagebuilder-add-item > nav a.active {
	bottom: -1px;
	border-top: 1px solid #ccc;
	border-left: 1px solid #ccc;
	border-right: 1px solid #ccc;
	background: #fff;
}

#pagebuilder-add-item .section-content {
	/*margin-right: 200px;
	margin-left: 20px;
	padding: 20px 0;*/
	width: 96%;
	left: 2%;
	position: absolute;
	top: 100px;
	bottom: 90px;
	height: auto;
	overflow-y: auto;
	overflow-x: hidden;
	display: none;
}

#pagebuilder-add-item .section-content.active {
	display: block;
}

#pagebuilder-add-item > aside {
	position: absolute;
	top: 100px;
	right: 0;
	bottom: 90px;
	height: auto;
	width: 20%;
	background: #ddd;
	border-left: 1px solid #ccc;
	/*float:right;
	width: 180px;
	margin-right: 10px;
	padding: 20px 0;*/
}
#pagebuilder-add-item .sub-section {
	padding: 20px 0 0;
}

#pagebuilder-add-item .sub-section > header {
	font-weight: bold;
	font-size: 14px;
}
/* ... */

